# edgeful-india

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
backtest/: costs.py  engine.py  metrics.py  splits.py  strategies.py
dashboard/: app.py
data/: db.py  schema.sql  universe.py  upstox_client.py
docs/: REPORTS.md  ROADMAP.md  SPEC.md
docs/sample_outputs/: banknifty_engulfing_15m_2026-04-27.txt  banknifty_gap_fill_2026-04-27.txt  banknifty_ib_2026-04-27.txt  banknifty_orb_2026-04-27.txt  banknifty_pdh_pdl_2026-04-27.txt  banknifty_session_bias_2026-04-27.txt  nifty_engulfing_15m_2026-04-27.txt  nifty_gap_fill_2026-04-27.txt  nifty_ib_2026-04-27.txt  nifty_orb_2026-04-27.txt  nifty_pdh_pdl_2026-04-27.txt  nifty_session_bias_2026-04-27.txt  reliance_engulfing_15m_2026-04-27.txt  reliance_gap_fill_2026-04-27.txt  reliance_ib_2026-04-27.txt  reliance_orb_2026-04-27.txt  reliance_pdh_pdl_2026-04-27.txt  reliance_session_bias_2026-04-27.txt
reports/: base.py  engulfing.py  gap_fill.py  ib.py  orb.py  pdh_pdl.py  session_bias.py
scripts/: backfill.py  fetch_india_vix.py  run_backtest.py  run_report.py  test_connection.py
tests/: test_db.py  test_universe.py  test_upstox_client.py
tests/backtest/: test_costs.py  test_engine.py  test_metrics.py  test_splits.py
tests/reports/: test_engulfing.py  test_gap_fill.py  test_ib.py  test_orb.py  test_pdh_pdl.py  test_session_bias.py
