[project]
name = "edgeful-india"
version = "0.1.0"
description = "Probability-based trading edge platform for Indian markets"
authors = [{ name = "Yash Ahire" }]
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "upstox-python-sdk>=2.21",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.32",
    "pandas-market-calendars>=4.4",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["upstox_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --cov=. --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
